--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.png" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+        <h1 class="text-light"><a href="index.html">Nay Lin</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.linkedin.com/in/nay-linn-825389122" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
