--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Nay Lin</h4>
-              <p><em>Senior Mobile Developer with over 6+ years of IT experience in Analysis, Design, and Development of various Mobile Application development for iOS and Android.I am seeking a new opportunity that will allow me to further expand on these skills.</em></p>
+              <p><em>Senior Mobile Developer with over 6+ years of IT experience in Analysis, Design, and Development of various Mobile Application development for iOS and Android.I am seeking a new opportunity that will allow me to further expand on my skills.</em></p>
             </div>
 
             <h3 class="resume-title">Education</h3>
